--- a/build.xml
+++ b/build.xml
@@ -2,13 +2,12 @@
 <project basedir="" default="create-zip" name="ESPPredictor">
 
     <property name="dirOffset" value="../../common_module_code" />
-    <property name="module.src.dir" value="${module.repo.dir}/${module.name}/module"/>
     <import file="${dirOffset}/commontargets.xml" />
 
 	<target depends="init" name="create-zip">
 		<antcall target="prezip" />
 		<zip destfile="${dest.dir}/${ant.project.name}.zip" whenempty="fail" defaultexcludes="true">
-			<fileset dir="module" includes="manifest" excludes="*.version"/>
+			<fileset dir="." includes="manifest" excludes="build.xml, *.version"/>
             <fileset dir="lib" includes="*"/>
             <!-- <fileset dir="../common/R">
                 <include name="common.R"/>
