--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project basedir="" default="create-zip" name="ESPPredictor">
 
-    <property name="dirOffset" value="../../common_module_code" />
+    <property name="dirOffset" value="../common_module_code" />
     <import file="${dirOffset}/commontargets.xml" />
 
 	<target depends="init" name="create-zip">
